--- a/app/src/main/res/layout/fragment_allah_names.xml
+++ b/app/src/main/res/layout/fragment_allah_names.xml
@@ -9,15 +9,19 @@
     android:background="@drawable/backgroundsalavatcounter"
     tools:context=".AllahNamesFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/namesAllah"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:padding="16dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/namesAllah"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
