--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -429,8 +429,9 @@
         android:layout_width="130dp"
         android:layout_height="43dp"
         android:gravity="left"
+        android:text=""
         android:textColor="@color/purple_45"
-        android:textSize="25sp"
+        android:textSize="23sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -444,6 +445,7 @@
         android:layout_width="130dp"
         android:layout_height="43dp"
         android:gravity="right"
+        android:text=""
         android:textColor="@color/purple_45"
         android:textSize="25sp"
         android:textStyle="bold"
