--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -9,9 +9,9 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="left"
+        android:gravity="left|bottom"
         android:textColor="@color/white"
-        android:textSize="44sp"
+        android:textSize="39sp"
         />
 
 </LinearLayout>
