--- a/app/src/main/res/layout/fragment_salavat.xml
+++ b/app/src/main/res/layout/fragment_salavat.xml
@@ -91,16 +91,17 @@
         android:id="@+id/salavatCounter"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="-16dp"
         android:gravity="bottom|center"
         android:text="0"
         android:textColor="@color/white"
-        android:textSize="64sp"
+        android:textSize="100sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
