--- a/app/src/main/res/layout/fragment_green_koran.xml
+++ b/app/src/main/res/layout/fragment_green_koran.xml
@@ -45,6 +45,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/koranContent"
+            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
