--- a/app/src/main/res/layout/listitem_koran.xml
+++ b/app/src/main/res/layout/listitem_koran.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/itemKoran"
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:gravity="left|bottom"
         android:textColor="@color/black"
-        android:textSize="39sp"
+        android:textSize="19sp"
         />
 
 </LinearLayout>
